Added repository to package.json

--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kyle138/sesSuppressionList_cleanup.git"
+  },
   "author": "",
   "license": "BSD-2-Clause",
+  "bugs": {
+    "url": "https://github.com/kyle138/sesSuppressionList_cleanup/issues"
+  },
   "dependencies": {
     "get-emails": "~1.0.1",
     "aws-sdk": "~2.4.0"
